[BUGFIX] Faulty layout if row details are too long
If the row details in in the workspaces difference view are too
long, e.g. a string that does not contain white-spaces like e.g.
a filename, the layout looks broken.
The solution is to introduce a new classname for the content
details and to force word breaking via CSS.

Fixes: #50114
Releases: 6.0, 6.1, 6.2

--- a/typo3/sysext/workspaces/Resources/Public/StyleSheet/module.css
+++ b/typo3/sysext/workspaces/Resources/Public/StyleSheet/module.css
@@ -211,3 +211,7 @@ img.t3-icon-workspaces-sendtonextstage {
 img.t3-icon-workspaces-sendtoprevstage {
 	background-position: 0 4px !important;
 }
+
+table.t3-workspaces-foldout-contentDiff td.content {
+	word-break: break-all;
+}
